fix overlay not covering page at all times

--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ body{
     background-color:rgba(0, 0, 0, 0.8);
     color:white;
     font-family: 'Poppins', sans-serif;
+
 }
 
 h1{
@@ -166,7 +167,7 @@ button.edit-button{
 }
 
 .overlay{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
